# kitconcept.contentsync

./: .env_dist  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: config.yml  docker.yml  main.yml  qa.yml  test.yml
containers/keycloak/: Dockerfile
containers/keycloak/import/: plone-realm.json
containers/openldap/: Dockerfile
containers/openldap/import/: data.ldif
containers/plone/: Dockerfile
news/: +initial.feature
src/kitconcept/contentsync/: __init__.py  cli.py  utils.py
src/kitconcept/contentsync/_types/: __init__.py  clients.py  keycloak.py  plone.py  sync.py
src/kitconcept/contentsync/clients/: __init__.py  keycloak.py  plone.py
src/kitconcept/contentsync/commands/: dump.py  info.py  sync.py
src/kitconcept/contentsync/converter/: __init__.py  keycloak.py
src/kitconcept/contentsync/converters/: __init__.py  keycloak.py
src/kitconcept/contentsync/settings/: __init__.py  settings.toml
src/kitconcept/contentsync/sync/: __init__.py  person.py
tests/: conftest.py
tests/cli/: conftest.py  test_cli_dump.py  test_cli_info.py  test_cli_sync.py
tests/clients/: test_clients_keycloak.py  test_clients_plone.py
tests/converter/: conftest.py  test_converter_keycloak.py
tests/converters/: conftest.py  test_converter_keycloak.py
tests/settings/: test_settings.py
